# project-templates

./: .gitignore  .mcp.json  INDEX.md  aitmpl-reference.md  atum-audit.config.json  awesome-llm-apps-reference.md  codrops-hub-reference.md  gitignore-reference.md  glama-mcp-reference.md  manifest.json  profile-readme-reference.md  rapidapi-hub-reference.md  roadmap-sh-reference.md  website-templates-reference.md
admin-dashboard/: README.md  package.json
agency/: README.md  package.json
ai-assistant/: .env.example  .gitignore  README.md  package.json
ai-cerebras-search/: README.md  cerebras_search_demo.py  requirements.txt
ai-langgraph-supervisor/: README.md  requirements.txt  supervisor_agent.py
ai-smolagent/: README.md  requirements.txt  smolagent_demo.py
ai-stripe-agent/: README.md  pyproject.toml  requirements.txt
ai-stripe-agent/src/: __init__.py  agent.py  config.py
ai-stripe-agent/src/tools/: __init__.py  customers.py  invoices.py  payments.py  subscriptions.py
ai-typesafe-agent/: README.md  requirements.txt  typesafe_agent.py
android-native/: .gitignore  README.md
api/: .gitignore  README.md  package.json
blog/: .gitignore  README.md  package.json
chrome-extension/: .gitignore  README.md  manifest.json  package.json  vite.config.ts
compliance/: INDEX.md
desktop/: .gitignore  README.md  package.json  tsconfig.json
discord-bot/: .gitignore  Dockerfile  README.md  package.json
ecommerce/: .gitignore  README.md  package.json
education/: README.md  package.json
electron-app/: .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.main.json
ml-pipeline/: .gitignore  MLproject  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
ml-pipeline/configs/: training.yaml
ml-pipeline/docker/: Dockerfile.serve  Dockerfile.train
ml-pipeline/src/: __init__.py
ml-pipeline/src/features/: __init__.py  engineering.py
ml-pipeline/src/serving/: __init__.py  api.py
ml-pipeline/tests/: test_api.py
(+528 files in other folders)
